welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not found: value parrotTrouble
  if (parrotTrouble==true && hour>20 || hour<7){
      ^