welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (parrotTrouble==true && hour>20 || hour<7){
    return true
  }
  return false
}